# zlib

./: CMakeLists.txt  CMakeLists_orig.txt  CTestConfig.cmake  gzguts.h  gzlib.c  gzwrite.c  zlib.pc.in
config/cmake/: CTestCustom.cmake  ConfigureChecks.cmake  ZLIBMacros.cmake  ZLIBTests.c  cacheinit.cmake  zlib-config.cmake.in
examples/: CMakeLists.txt
test/: CMakeLists.txt
